Fixes Various crash issues